[gd_scene load_steps=9 format=3 uid="uid://d2cw3twy3o784"]

[ext_resource type="Script" path="res://scripts/carrera.gd" id="1_monep"]
[ext_resource type="MeshLibrary" uid="uid://dmgejyibfvdbl" path="res://grid/grilla.tres" id="2_ntusv"]
[ext_resource type="Script" path="res://scripts/pivotCarrera.gd" id="3_vhv1t"]
[ext_resource type="PackedScene" uid="uid://dlfowopk7iig2" path="res://palo.tscn" id="4_buyc7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_d43r0"]
sky_top_color = Color(0.0602959, 0.461494, 0.766921, 1)
sky_horizon_color = Color(0.492674, 0.695581, 0.729119, 1)
sky_curve = 0.139955
ground_bottom_color = Color(0.341608, 0.620276, 0.843333, 1)
ground_horizon_color = Color(0.494118, 0.694118, 0.729412, 1)
sun_angle_max = 0.0

[sub_resource type="Sky" id="Sky_t846e"]
sky_material = SubResource("ProceduralSkyMaterial_d43r0")

[sub_resource type="Environment" id="Environment_nnhhw"]
background_mode = 2
sky = SubResource("Sky_t846e")
tonemap_mode = 2
tonemap_exposure = 0.67
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_vl67i"]
size = Vector3(2.93731, 34.3416, 37.8896)

[node name="Carrera" type="Node3D" node_paths=PackedStringArray("spawners")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34343, 0, 0)
script = ExtResource("1_monep")
spawners = [NodePath("spawner"), NodePath("spawner2"), NodePath("spawner3"), NodePath("spawner4")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.739081, -0.457937, 0.494017, 0.62139, -0.18035, 0.762462, -0.260064, 0.870498, 0.417851, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nnhhw")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_ntusv")
data = {
"cells": PackedInt32Array(-1, 0, 16, -65536, 0, 16, -65535, 0, 16, -2, 0, 16, -65535, 1, 16, -65536, 1, 16, -1, 1, 16, -2, 1, 16, -65536, 65535, 17, -1, 65535, 17, -2, 65535, 17, -2, 65533, 17, -3, 0, 1048592, -3, 1, 1048592, 65534, 65532, 1441830, 65534, 65531, 1441810, 65534, 65530, 1441810, 65535, 65525, 1441813, 65535, 65528, 1441819, 65534, 65528, 1441819, 0, 65528, 1441819, 131071, 65522, 655376, 131070, 65521, 16, 65536, 65521, 16, 131069, 65519, 16, 131068, 65518, 16, 131068, 65517, 16, 131068, 65516, 16, 131069, 65514, 16, 131071, 65514, 16, 0, 65524, 1441828, 65535, 65524, 1441828, 65534, 65524, 1441828, 131071, 65523, 1441828, 65537, 65519, 1441808, 65538, 65518, 1441808, 65538, 65517, 1441808, 65538, 65516, 1441808, 131071, 65517, 1441808, 131071, 65518, 1441808, 131071, 65516, 1441808, 65537, 65514, 1441808, 196607, 65517, 1441794, 196607, 65514, 1441796, -65537, 65511, 1441814, -131070, 65508, 1441814, -65540, 65508, 1441814, -131071, 65505, 1441819, -65540, 65505, 1441819, -131070, 65505, 1441819, -65539, 65505, 1441819, -65536, 65533, 1441809, 0, 65532, 1441830, -65534, 0, 1441808, -65534, 1, 1441808, -4, 0, 1441808, -4, 1, 1441808, 0, 65531, 1441810, 0, 65530, 1441810, -3, 65498, 1441809, 65533, 65498, 1441800, -3, 65499, 1441839, -2, 65498, 1441809, -1, 65498, 1441809, -65537, 65502, 1441829, -65537, 65504, 1441819, -65538, 65504, 1441819, -131072, 65504, 1441819, -3, 65500, 1441831, -65538, 65502, 1441829, -65537, 65507, 1441816, -65536, 65498, 1441809, -131072, 65502, 1441829, -65535, 65500, 1441831, -65535, 65499, 1441839, -65535, 65498, 1441809, 1, 65498, 1441800)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00831, 0.981969, 2.71695)

[node name="spawner2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.808214, 1.68945, 3.25389)

[node name="spawner3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.937017, 1.16289, 2.98299)

[node name="spawner4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.64066, 1.91594, 3.32969)

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 10.9921, 4.816, -1.95799)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(-4.37114e-08, -0.0279216, 0.999611, 1.77636e-15, 0.999611, 0.0279216, -1, 1.22049e-09, -4.36944e-08, 18.0111, 4.34337, -2.3819)
current = true
fov = 31.5
size = 18.308
script = ExtResource("3_vhv1t")
limite_velocidad = 3.0

[node name="ZonaMuerte" type="Area3D" parent="Pivot/Camera3D"]
transform = Transform3D(1, -1.77636e-15, 0, -4.44089e-16, 0.85264, -0.522498, 3.55271e-15, 0.522499, 0.85264, -5.69871, 1.51672, -33.643)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/Camera3D/ZonaMuerte"]
transform = Transform3D(0.999976, 6.64357e-13, 0, -7.61702e-12, 1, 8.25678e-16, 4.95464e-07, 8.25704e-16, 1, -14.2186, -0.610686, 4.48067)
shape = SubResource("BoxShape3D_vl67i")

[node name="palo" parent="." instance=ExtResource("4_buyc7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.969182, -1.07126, -56.7886)

[connection signal="body_entered" from="Pivot/Camera3D/ZonaMuerte" to="." method="_on_zona_muerte_body_entered"]
