[gd_scene load_steps=12 format=3 uid="uid://d2cw3twy3o784"]

[ext_resource type="Script" path="res://scripts/carrera.gd" id="1_klcjr"]
[ext_resource type="MeshLibrary" uid="uid://dmgejyibfvdbl" path="res://grid/grilla.tres" id="2_5w8gg"]
[ext_resource type="Script" path="res://scripts/pivotCarrera.gd" id="3_mr78p"]
[ext_resource type="PackedScene" uid="uid://dlfowopk7iig2" path="res://assets/palo.tscn" id="4_3dv3i"]
[ext_resource type="PackedScene" uid="uid://jpfvvaw8jbwu" path="res://assets/confeti.tscn" id="5_rj4o5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_d43r0"]
sky_top_color = Color(0.0602959, 0.461494, 0.766921, 1)
sky_horizon_color = Color(0.492674, 0.695581, 0.729119, 1)
sky_curve = 0.139955
ground_bottom_color = Color(0.341608, 0.620276, 0.843333, 1)
ground_horizon_color = Color(0.494118, 0.694118, 0.729412, 1)
sun_angle_max = 0.0

[sub_resource type="Sky" id="Sky_t846e"]
sky_material = SubResource("ProceduralSkyMaterial_d43r0")

[sub_resource type="Environment" id="Environment_nnhhw"]
background_mode = 2
sky = SubResource("Sky_t846e")
tonemap_mode = 2
tonemap_exposure = 0.67
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_e5vcs"]
size = Vector3(4, 30, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_a0i8j"]
size = Vector3(200, 5, 250.461)

[sub_resource type="BoxShape3D" id="BoxShape3D_gq4wa"]
size = Vector3(25.8036, 10, 0.5)

[node name="Carrera" type="Node3D" node_paths=PackedStringArray("spawners")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34343, 0, 0)
script = ExtResource("1_klcjr")
spawners = [NodePath("spawner"), NodePath("spawner2"), NodePath("spawner3"), NodePath("spawner4")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.739081, -0.457937, 0.494017, 0.62139, -0.18035, 0.762462, -0.260064, 0.870498, 0.417851, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nnhhw")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_5w8gg")
data = {
"cells": PackedInt32Array(-1, 0, 16, -65536, 0, 16, -65535, 0, 16, -2, 0, 16, -65535, 1, 16, -65536, 1, 16, -1, 1, 16, -2, 1, 16, -65536, 65535, 17, -1, 65535, 17, -2, 65535, 17, -2, 65533, 17, -3, 0, 1048592, -3, 1, 1048592, 65534, 65532, 1441830, 65534, 65531, 1441810, 65534, 65530, 1441810, 65535, 65525, 1441813, 65535, 65528, 1441819, 65534, 65528, 1441819, 0, 65528, 1441819, 131071, 65522, 655376, 131070, 65521, 16, 65536, 65521, 16, 131069, 65519, 16, 131068, 65518, 16, 131068, 65517, 16, 131068, 65516, 16, 131069, 65514, 16, 131071, 65514, 16, 0, 65524, 1441828, 65535, 65524, 1441828, 65534, 65524, 1441828, 131071, 65523, 1441828, 65537, 65519, 1441808, 65538, 65518, 1441808, 65538, 65517, 1441808, 65538, 65516, 1441808, 131071, 65517, 1441808, 131071, 65518, 1441808, 131071, 65516, 1441808, 65537, 65514, 1441808, 196607, 65517, 1441794, 196607, 65514, 1441796, -65537, 65511, 1441814, -131070, 65508, 1441814, -65540, 65508, 1441814, -131071, 65505, 1441819, -65540, 65505, 1441819, -131070, 65505, 1441819, -65539, 65505, 1441819, -65536, 65533, 1441809, 0, 65532, 1441830, -65534, 0, 1441808, -65534, 1, 1441808, -4, 0, 1441808, -4, 1, 1441808, 0, 65531, 1441810, 0, 65530, 1441810, -3, 65498, 1441809, 65533, 65498, 1441800, -3, 65499, 1441839, -1, 65498, 1441809, -65537, 65502, 1441829, -65537, 65504, 1441819, -65538, 65504, 1441819, -131072, 65504, 1441819, -3, 65500, 1441831, -65538, 65502, 1441829, -65537, 65507, 1441809, -131072, 65502, 1441829, -65535, 65500, 1441831, -65535, 65499, 1441839, -65535, 65498, 1441809, 1, 65498, 1441800, -65535, 65501, 27, -3, 65501, 27, 65533, 65495, 30, 65533, 65496, 30, 1, 65496, 30, 1, 65495, 30, 0, 65498, 1441829, 65534, 65498, 1441829, 65535, 65492, 1441807, -1, 65507, 1441819, 65534, 65493, 1441807, 65535, 65493, 1441807, 0, 65493, 1441807, 1, 65493, 1441807, 65533, 65493, 1441807, 0, 65492, 1441807, 65534, 65492, 1441807, 65533, 65491, 1441807, 65534, 65491, 1441807, 65535, 65491, 1441807, 0, 65491, 1441807, 1, 65491, 1441807, 1, 65490, 1441807, 2, 65489, 1441807, 65533, 65490, 1441807, 65532, 65489, 1441807, 3, 65488, 1441807, 4, 65487, 1441807, 5, 65485, 1441807, 65531, 65488, 1441807, 65530, 65487, 1441807, 65529, 65485, 1441807, 65531, 65483, 1048590, 3, 65483, 1048590, 0, 65482, 1048590, 65534, 65482, 1048590, 65535, 65488, 1441807, 65535, 65486, 1441807, 65535, 65484, 1441807, 65535, 65490, 1441807, 65535, 65482, 1048590, 65535, 65481, 1048590, 3, 65482, 1048590, 65531, 65482, 1048590, 4, 65483, 1048590, 65530, 65483, 1048590, 4, 65480, 1048593, 0, 65480, 1048593, 1, 65480, 1048593, 2, 65480, 1048593, 3, 65480, 1048593, 65535, 65480, 1048593, 65534, 65480, 1048593, 65532, 65480, 1048593, 65533, 65480, 1048593, 65531, 65480, 1048593, 65530, 65480, 1048593, -1, 65497, 17, -65533, 65482, 1048590, -65532, 65483, 1048590, -1, 65481, 1048590, -1, 65482, 1048590, -5, 65482, 1048590, -6, 65483, 1048590, -5, 65483, 1048590, 65539, 65483, 1048581, 131071, 65482, 1048589, 131067, 65483, 1048586, 131071, 65486, 1048582, 131066, 65487, 1048587, 65538, 65489, 1048588, 65540, 65487, 1048588, 131071, 65491, 1048588, 65536, 65492, 1048582, 131070, 65493, 1048582, 65537, 65493, 1048626, 131070, 65492, 1048587, 131069, 65493, 1048626, -65536, 65482, 1048590, -2, 65482, 1048590, 5, 65480, 17, 65531, 65478, 22, 65534, 65478, 22, 1, 65478, 22, 4, 65478, 22, 65542, 65477, 17, 131077, 65477, 17, 196612, 65477, 17, 262147, 65477, 17, 327682, 65477, 17, 327681, 65477, 17, 327680, 65477, 17, 393215, 65477, 17, 393214, 65477, 17, 131078, 65477, 37, 196613, 65477, 37, 262148, 65477, 37, 327683, 65477, 37, 327683, 65479, 37, 327683, 65478, 37, 131078, 65479, 37, 131078, 65478, 37, 196613, 65479, 37, 196613, 65478, 37, 262148, 65479, 37, 262148, 65478, 37, 131065, 65477, 17, 196602, 65477, 17, 262139, 65477, 17, 327676, 65477, 17, 393213, 65477, 17, 393212, 65477, 655397, 327675, 65477, 655397, 262138, 65477, 655397, 196601, 65477, 655397, 131064, 65477, 655397, 196601, 65479, 655397, 196601, 65478, 655397, 262138, 65478, 655397, 327675, 65479, 655397, 327675, 65478, 655397, 393212, 65479, 655397, 393212, 65478, 655397, 131064, 65479, 655397, 131064, 65478, 655397, 65543, 65478, 37, 65543, 65477, 37, 65543, 65479, 37, 131065, 65478, 27, 131065, 65479, 27, 458750, 65478, 27, 458751, 65478, 27, 393216, 65478, 27, 393217, 65478, 27, 393218, 65478, 27, 458750, 65479, 27, 458751, 65479, 27, 393216, 65479, 27, 393217, 65479, 27, 393218, 65479, 27, 131066, 65479, 1245211, 131066, 65478, 1245211, 131066, 65477, 1245211, 262138, 65479, 655397, 131065, 65480, 27, 65541, 65479, 65563, 65541, 65478, 65563, 65541, 65477, 65563, 65542, 65479, 27, 65542, 65478, 27, 65542, 65480, 27, 458750, 65477, 27, 458751, 65477, 27, 393216, 65477, 27, 393217, 65477, 27, 393218, 65477, 27, 458749, 65477, 27, 458749, 65478, 27, 458749, 65479, 27)
}
metadata/_editor_floor_ = Vector3(-1, 6, 0)

[node name="spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00831, 0.981969, 2.71695)

[node name="spawner2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.808214, 1.68945, 3.25389)

[node name="spawner3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.937017, 1.16289, 2.98299)

[node name="spawner4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.64066, 1.91594, 3.32969)

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 10.9921, 4.816, -1.95799)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(-4.37114e-08, -0.0279216, 0.999611, 1.77636e-15, 0.999611, 0.0279216, -1, 1.22049e-09, -4.36944e-08, 18.0111, 4.34337, -2.3819)
current = true
fov = 31.5
size = 18.308
script = ExtResource("3_mr78p")
velocidad_inicial = 1.0
limite_velocidad = 3.0

[node name="zona_muerte" type="Area3D" parent="Pivot/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/Camera3D/zona_muerte"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
shape = SubResource("BoxShape3D_e5vcs")

[node name="palo5" parent="." instance=ExtResource("4_3dv3i")]
transform = Transform3D(0.995975, 0.0886181, -0.0133631, 0.0134013, 0.000157521, 0.999919, 0.0886122, -0.996073, -0.00103106, -8.83469, 1.99805, -107.121)

[node name="palo4" parent="." instance=ExtResource("4_3dv3i")]
transform = Transform3D(0.997964, 0.0375408, -0.051557, 0.0519551, -0.00971649, 0.998606, 0.0369874, -0.999251, -0.0116473, 6.98753, 1.57921, -107.145)

[node name="palo3" parent="." instance=ExtResource("4_3dv3i")]
transform = Transform3D(0.998962, -0.0075401, -0.0449354, 0.0447806, -0.0195595, 0.998807, -0.00840998, -0.999782, -0.0192016, -0.91022, 2.3131, -108.952)

[node name="palo2" parent="." instance=ExtResource("4_3dv3i")]
transform = Transform3D(1, 0, 0, 0, 0.026997, 0.999636, 0, -0.999636, 0.026997, -0.996828, 0.298913, -76.9686)

[node name="palo" parent="." instance=ExtResource("4_3dv3i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.969182, -1.07126, -56.7886)

[node name="zona_vacio" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -59.3596, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="zona_vacio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.2305)
shape = SubResource("BoxShape3D_a0i8j")

[node name="zona_meta" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -111.545)

[node name="CollisionShape3D" type="CollisionShape3D" parent="zona_meta"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.543518, 0, 0)
shape = SubResource("BoxShape3D_gq4wa")

[node name="confeti2" parent="." instance=ExtResource("5_rj4o5")]
transform = Transform3D(-0.999443, -1.63403e-05, 0.0333992, -0.000156189, 0.999991, -0.00418458, -0.0333988, -0.00418746, -0.999434, 10.0665, 4.59877, -110.676)

[node name="confeti" parent="." instance=ExtResource("5_rj4o5")]
transform = Transform3D(0.0167019, -1.74009e-05, 0.999861, 1.64189e-06, 1, 1.73759e-05, -0.999861, 1.35145e-06, 0.0167019, -9.67573, 3.84519, -110.398)
